# adk_custom_ui

./: .gitignore  README.md  pyproject.toml  skills.md
apps/backend/: .gitignore  README.md  backend.py  pyproject.toml
apps/backend/agents/architectural_time_traveler/: agent.py
apps/backend/agents/class_details_agent/: agent.py
apps/backend/agents/git_tutor_agent/: agent.py
apps/backend/agents/learning_coach_agent/: agent.py
apps/backend/agents/onboarding_tutor/: __init__.py  agent.py
apps/backend/agents/onboarding_tutor/_skills/onboarding-tutor-skill/: SKILL.md
apps/frontend/: README.md  frontend.py  pyproject.toml
apps/frontend/pages/: git_tutor_ui.py
apps/frontend_a2ui/: index.html  package-lock.json  package.json
apps/frontend_a2ui/src/: App.tsx  index.css
apps/frontendangular/: README.md  angular.json  package-lock.json  package.json
apps/frontendangular/src/: styles.css
apps/frontendangular/src/app/: app.css  app.html  app.spec.ts  app.ts
